Phase 5a complete: Extract infrastructure to comic-common
Completed Phase 5a - Infrastructure extraction:

1. Added configuration properties to comic-common:
   - DailyRunnerProperties
   - StartupReconcilerProperties

2. Updated comic-common build.gradle:
   - Added jsoup dependency for WebInspector

3. Updated comic-metrics:
   - Changed from JsonConfigWriter to StatsWriter interface
   - Removed ComicAPI dependency
   - Now depends only on comic-common

4. Updated comic-engine:
   - Updated imports to use common infrastructure
   - Fixed test imports
   - Still depends on ComicAPI temporarily (for ConfigurationFacade, IComicsBootstrap)

All modules build successfully:
- comic-common: builds ✓
- comic-metrics: 17 tests pass ✓ (no ComicAPI dependency!)
- comic-engine: 4 tests pass ✓

Next: Phase 5b - Remove duplicate code from ComicAPI

--- a/comic-common/build.gradle
+++ b/comic-common/build.gradle
@@ -23,6 +23,7 @@ ext {
 	lombokVersion = '1.18.42'
 	gsonVersion = '2.11.0'
 	guavaVersion = '33.5.0-jre'
+	jsoupVersion = '1.21.2'
 }
 
 repositories {
@@ -35,6 +36,9 @@ dependencies {
 
 	// Guava for utilities
 	api "com.google.guava:guava:${guavaVersion}"
+
+	// Jsoup for HTML parsing (WebInspector)
+	api "org.jsoup:jsoup:${jsoupVersion}"
 
 	// Spring Boot for configuration properties
 	api 'org.springframework.boot:spring-boot-starter'
