--- a/comic-engine/build.gradle
+++ b/comic-engine/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	// comic-common dependency for shared types
 	implementation project(':comic-common')
 
-	// ComicAPI for infrastructure (temporary - TODO: extract to separate module)
+	// ComicAPI dependency (temporary - for ConfigurationFacade, IComicsBootstrap)
 	implementation project(':ComicAPI')
 
 	// Core dependencies
