--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Check bundle size
       run: |
-        MAIN_FILE=$(ls dist/comic-web/main-*.js)
+        MAIN_FILE=$(ls dist/comic-web/browser/main-*.js)
         MAIN_SIZE=$(stat -c %s "$MAIN_FILE")
         MAIN_SIZE_KB=$((MAIN_SIZE / 1024))
         echo "Main bundle size: ${MAIN_SIZE_KB}KB"
@@ -65,7 +65,7 @@ jobs:
       if: success()
       with:
         name: angular-build
-        path: comic-web/dist/comic-web
+        path: comic-web/dist/comic-web/browser
         retention-days: 7
 
     - name: Upload test coverage
