--- a/comic-api/Dockerfile
+++ b/comic-api/Dockerfile
@@ -4,6 +4,6 @@ VOLUME /tmp
 
 EXPOSE 8888
 
-COPY build/libs/comic-api-1.2.0-SNAPSHOT.jar /
+COPY build/libs/comic-api-2.1.35.jar /
 
-ENTRYPOINT [ "java", "-jar", "/comic-api-1.2.0-SNAPSHOT.jar" ]
+ENTRYPOINT [ "java", "-jar", "/comic-api-2.1.35.jar" ]
