--- a/comic-web/angular.json
+++ b/comic-web/angular.json
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
@@ -106,7 +107,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
