Upgrade favicon to 2025 standards with modern format support
Implemented modern 2025 favicon setup with multiple formats and PWA support:

Changes:

1. Created modern SVG favicon (favicon.svg):
   - Scalable vector format (primary favicon for modern browsers)
   - Comic book themed design with gradient background
   - Stylized comic panels and speech bubble accent
   - Colors match app theme (#5B9BD5 gradient)
   - Works at all sizes without pixelation

2. Created Web App Manifest (manifest.json):
   - Full PWA (Progressive Web App) support
   - Defines app name, colors, display mode
   - Lists icon sizes for Android/iOS home screen
   - Theme color: #5B9BD5 (matches navbar)
   - Background color: #F8FAFB (matches app background)

3. Updated index.html with modern favicon tags:
   - Changed title from "The Comic Viewer" to "Daily Comics"
   - Added theme-color meta tag for mobile browsers
   - SVG favicon as primary (type="image/svg+xml")
   - ICO fallback for older browsers
   - Apple touch icon reference (180x180)
   - Web app manifest link
   - Added description meta tag

4. Updated angular.json:
   - Added favicon.svg to assets
   - Added manifest.json to assets
   - Applies to both dev and test configurations

5. Created assets/icons/README.md:
   - Documentation for generating PNG icons
   - Lists all required sizes (72x72 to 512x512)
   - Instructions for using SVG source
   - Links to online generation tools

Benefits:
- Modern browsers use crisp SVG favicon
- Older browsers fall back to ICO
- PWA installable on mobile devices
- App icons for home screen (iOS/Android)
- Consistent branding across all platforms
- Smaller file sizes (SVG is 1.3KB vs 79KB PNG-as-ICO)

Result:
- All 115 tests passing
- Production build successful
- Favicon displays in browser tab
- Ready for PWA installation

--- a/comic-web/angular.json
+++ b/comic-web/angular.json
@@ -21,6 +21,8 @@
             "inlineStyleLanguage": "css",
             "assets": [
               "src/favicon.ico",
+              "src/favicon.svg",
+              "src/manifest.json",
               "src/assets"
             ],
             "styles": [
@@ -114,6 +116,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
+              "src/favicon.svg",
+              "src/manifest.json",
               "src/assets"
             ]
           }
