--- a/comic-web/angular.json
+++ b/comic-web/angular.json
@@ -20,11 +20,13 @@
             "tsConfig": "src/tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.svg",
+              "src/manifest.json",
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
@@ -106,12 +108,14 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/theme.scss",
               "src/styles.css"
             ],
             "scripts": [],
             "assets": [
-              "src/favicon.ico",
+              "src/favicon.svg",
+              "src/manifest.json",
               "src/assets"
             ]
           }
