--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -33,3 +33,14 @@ comics.cache.chromeHeadless=true
 jwt.secret=your-secret-key-should-be-very-long-and-secure-in-production-environment
 jwt.expiration=900000
 jwt.refresh-expiration=86400000
+
+# Metrics Configuration
+# Color detection: Percentage of pixels to sample for determining if image is B&W or color (0.0-100.0)
+comics.metrics.color-detection.sample-percentage=5.0
+# Error tracking: Maximum number of errors to keep per comic in last_errors.json
+comics.metrics.error-tracking.max-errors-per-comic=5
+# Metadata backfill job configuration
+comics.metrics.backfill.enabled=true
+comics.metrics.backfill.batch-size=100
+# Run daily at 3:00 AM
+comics.metrics.backfill.cron=0 0 3 * * ?
