Add Lombok configuration to preserve @Qualifier annotations
- Create lombok.config with copyableAnnotations setting
- Allows @RequiredArgsConstructor to preserve Spring's @Qualifier
- Fixes NoUniqueBeanDefinitionException when multiple beans of same type exist
- Add @Qualifier annotations to Job and Step parameters in batch configs

This resolves bean ambiguity issues in Spring Batch job configuration where
multiple Job and Step beans exist in the application context.

--- a/comic-api/src/integration/resources/application-integration.properties
+++ b/comic-api/src/integration/resources/application-integration.properties
@@ -17,6 +17,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Spring Batch schema initialization
 spring.batch.jdbc.initialize-schema=always
 
+# Disable automatic job execution on startup (we have multiple jobs and don't want them to run automatically in tests)
+spring.batch.job.enabled=false
+
 # Cache properties for integration tests
 comics.cache.location=./integration-cache
 comics.cache.config=comics.json
@@ -25,9 +28,13 @@ comics.cache.preferencesConfig=preferences.json
 comics.cache.chromeHeadless=true
 comics.bootstrap.config=bootstrap.json
 
-# Disable scheduled tasks in tests
-daily.runner.enabled=false
-startup.reconciler.enabled=false
+# Disable all batch job schedulers in integration tests
+batch.comic-download.enabled=false
+batch.reconciliation.enabled=false
+batch.metrics-archive.enabled=false
+batch.image-backfill.enabled=false
+batch.metrics-update.enabled=false
+batch.record-purge.enabled=false
 
 # Disable comic downloaders in integration tests to prevent browser launches
 comics.downloaders.enabled=false
