--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -15,9 +15,37 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.show-actuator=true
 springdoc.swagger-ui.operationsSorter=method
 
-dailyrunner.enabled=true
-startup.reconcile.enabled=true
-startup.reconcile.scheduleTime=06:00:00
+# Spring Batch Job Configuration
+# All jobs run in America/Toronto timezone
+batch.timezone=America/Toronto
+
+# Comic Download Job - Downloads all comics daily
+batch.comic-download.enabled=true
+batch.comic-download.cron=0 0 6 * * ? America/Toronto
+
+# Comic Reconciliation Job - Reconciles comic configuration with bootstrap
+batch.reconciliation.enabled=true
+batch.reconciliation.cron=0 15 6 * * ? America/Toronto
+
+# Metrics Archive Job - Archives yesterday's metrics to JSON
+batch.metrics-archive.enabled=true
+batch.metrics-archive.cron=0 30 6 * * ? America/Toronto
+
+# Image Metadata Backfill Job - Backfills missing image metadata
+batch.image-backfill.enabled=true
+batch.image-backfill.cron=0 30 6 * * ? America/Toronto
+batch.image-backfill.batch-size=100
+
+# Metrics Update Job - Updates metrics every 5 minutes
+batch.metrics-update.enabled=true
+batch.metrics-update.fixed-delay=300000
+
+# Retrieval Record Purge Job - Purges old retrieval records
+batch.record-purge.enabled=true
+batch.record-purge.cron=0 45 6 * * ? America/Toronto
+
+# Batch execution tracking - JSON file location
+batch.tracking.json-file=${comics.cache.location}/batch-executions.json
 
 # Default cache location - will be normalized to appropriate OS path
 # Windows: Uses C:/comics if drive exists, otherwise ~/comics
@@ -39,8 +67,3 @@ jwt.refresh-expiration=86400000
 comics.metrics.color-detection.sample-percentage=5.0
 # Error tracking: Maximum number of errors to keep per comic in last_errors.json
 comics.metrics.error-tracking.max-errors-per-comic=5
-# Metadata backfill job configuration
-comics.metrics.backfill.enabled=true
-comics.metrics.backfill.batch-size=100
-# Run daily at 3:00 AM
-comics.metrics.backfill.cron=0 0 3 * * ?
