--- a/comic-engine/build.gradle
+++ b/comic-engine/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	// comic-common dependency for shared types
 	implementation project(':comic-common')
 
+	// comic-metrics dependency for metrics-related batch jobs
+	implementation project(':comic-metrics')
+
 	// Core dependencies
 	implementation "com.google.code.gson:gson:${gsonVersion}"
 	implementation "com.google.guava:guava:${guavaVersion}"
