Add batch job integration tests and fix JsonBatchExecutionTracker
- Create AbstractBatchJobIntegrationTest base class with batch test utilities
  - Test image creation helpers (PNG/JPEG/GIF)
  - Metadata assertion helpers
  - Batch execution tracking validation helpers with BatchExecutionSummary DTO
- Add ImageMetadataJobIT with 5 comprehensive tests
  - Process images without metadata
  - Skip images with existing metadata
  - Handle invalid images gracefully
  - Detect formats correctly (PNG/JPEG/GIF)
  - Verify idempotency
- Add RetrievalRecordPurgeJobIT with 3 tests
  - Purge old records while keeping recent ones
  - Handle no records gracefully
  - Verify idempotency
- Add MetricsArchiveJobIT with 3 tests (2 failing - needs investigation)
- Create TestImageGenerator utility for realistic test images
- Add BatchIntegrationTestConfig with mock beans for disabled jobs
- Add application-batch-integration.properties test profile
- Fix JsonBatchExecutionTracker LocalDateTime serialization bug
  - Inject gsonWithLocalDate bean instead of creating plain Gson
  - Fixes tracker failures preventing batch-executions.json creation
- Add JsonBatchExecutionTracker validation to integration tests
  - ImageMetadataJobIT validates execution tracking
  - RetrievalRecordPurgeJobIT validates execution tracking

Test Results: 70/72 passing (2 MetricsArchiveJob tests need investigation)

--- a/.gitignore
+++ b/.gitignore
@@ -171,5 +171,6 @@ gradle-app.setting
 
 # Runtime and temporary files
 **/test-cache/
-
 **/C:/**
+**/batch-integration-cache/**
+**/integration-cache/**/
