--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -21,19 +21,19 @@ batch.timezone=America/Toronto
 
 # Comic Download Job - Downloads all comics daily
 batch.comic-download.enabled=true
-batch.comic-download.cron=0 0 6 * * ? America/Toronto
+batch.comic-download.cron=0 0 6 * * ?
 
 # Comic Reconciliation Job - Reconciles comic configuration with bootstrap
 batch.reconciliation.enabled=true
-batch.reconciliation.cron=0 15 6 * * ? America/Toronto
+batch.reconciliation.cron=0 15 6 * * ?
 
 # Metrics Archive Job - Archives yesterday's metrics to JSON
 batch.metrics-archive.enabled=true
-batch.metrics-archive.cron=0 30 6 * * ? America/Toronto
+batch.metrics-archive.cron=0 30 6 * * ?
 
 # Image Metadata Backfill Job - Backfills missing image metadata
 batch.image-backfill.enabled=true
-batch.image-backfill.cron=0 30 6 * * ? America/Toronto
+batch.image-backfill.cron=0 30 6 * * ?
 batch.image-backfill.batch-size=100
 
 # Metrics Update Job - Updates metrics every 5 minutes
@@ -42,7 +42,7 @@ batch.metrics-update.fixed-delay=300000
 
 # Retrieval Record Purge Job - Purges old retrieval records
 batch.record-purge.enabled=true
-batch.record-purge.cron=0 45 6 * * ? America/Toronto
+batch.record-purge.cron=0 45 6 * * ?
 
 # Batch execution tracking - JSON file location
 batch.tracking.json-file=${comics.cache.location}/batch-executions.json
