Fix Spring Batch startup error by disabling JobLauncherApplicationRunner
When multiple Spring Batch jobs are defined, Spring Boot's JobLauncherApplicationRunner
requires spring.batch.job.name to be specified to know which job(s) to run automatically.

Since we use custom schedulers with @Scheduled annotations and a CommandLineRunner
implementation (ComicDownloadJobScheduler), we don't need the JobLauncherApplicationRunner.

Added spring.batch.job.enabled=false to application.properties to disable the
auto-run behavior while preserving scheduled job execution and startup job execution.

Fixes startup error: "Job name must be specified in case of multiple jobs"

--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -16,6 +16,9 @@ springdoc.show-actuator=true
 springdoc.swagger-ui.operationsSorter=method
 
 # Spring Batch Job Configuration
+# Disable auto-run of jobs on startup (jobs are scheduled via @Scheduled annotations)
+spring.batch.job.enabled=false
+
 # All jobs run in America/Toronto timezone
 batch.timezone=America/Toronto
 
