Add Caffeine cache with predictive lookahead (N±3)
- Add Caffeine 3.1.8 dependency and Spring Cache support
- Create CaffeineCacheProperties for configurable cache settings
- Configure 4 separate caches: navigation (300/10min), boundary (100/60min), navigationDates (200/30min), metadata (60/60min)
- Add @Cacheable annotations to ComicManagementFacadeImpl and ComicStorageFacadeImpl
- Create PredictiveCacheService for async N±3 lookahead prefetching
- Integrate lookahead in ComicController navigation endpoints
- Add comprehensive unit and integration tests
- All cache settings configurable via application.properties

--- a/comic-api/build.gradle
+++ b/comic-api/build.gradle
@@ -87,6 +87,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+	// Caffeine cache
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
 	// JDBC and H2 database for Spring Batch job repository (use Spring Boot managed versions)
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
