--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -70,3 +70,27 @@ jwt.refresh-expiration=86400000
 comics.metrics.color-detection.sample-percentage=5.0
 # Error tracking: Maximum number of errors to keep per comic in last_errors.json
 comics.metrics.error-tracking.max-errors-per-comic=5
+
+# Caffeine Cache Configuration
+# Enable/disable Caffeine caching
+comics.cache.caffeine.enabled=true
+
+# Navigation cache - stores ComicNavigationResult for comic strip navigation
+comics.cache.caffeine.navigation.max-size=300
+comics.cache.caffeine.navigation.ttl-minutes=10
+
+# Boundary dates cache - stores newest/oldest dates for each comic
+comics.cache.caffeine.boundary.max-size=100
+comics.cache.caffeine.boundary.ttl-minutes=60
+
+# Navigation dates cache - stores next/previous date lookup results
+comics.cache.caffeine.navigation-dates.max-size=200
+comics.cache.caffeine.navigation-dates.ttl-minutes=30
+
+# Metadata cache - stores ComicItem configuration data
+comics.cache.caffeine.metadata.max-size=60
+comics.cache.caffeine.metadata.ttl-minutes=60
+
+# Predictive lookahead cache configuration
+comics.cache.caffeine.lookahead.enabled=true
+comics.cache.caffeine.lookahead.count=3
