Implement comic backfill job: add configuration, service, scheduler, and tests for backfilling missing comic strips for a specified year; enhance application properties for scheduling.

--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -47,6 +47,14 @@ batch.metrics-update.fixed-delay=300000
 batch.record-purge.enabled=true
 batch.record-purge.cron=0 45 6 * * ?
 
+# Comic Backfill Job - Backfills missing comics for a specific year
+batch.comic-backfill.enabled=true
+batch.comic-backfill.cron=0 0 7 * * ?
+batch.comic-backfill.target-year=2025
+batch.comic-backfill.chunk-size=10
+batch.comic-backfill.max-consecutive-failures=3
+batch.comic-backfill.delay-between-comics-ms=2000
+
 # Batch execution tracking - JSON file location
 batch.tracking.json-file=${comics.cache.location}/batch-executions.json
 
