--- a/comic-common/build.gradle
+++ b/comic-common/build.gradle
@@ -3,27 +3,11 @@ plugins {
 	id "java-library"
 }
 
-group = 'kkdad'
-version = '1.2.0-SNAPSHOT'
-
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
-}
 
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
-}
-
-// Define common dependency versions
-ext {
-	lombokVersion = '1.18.42'
-	gsonVersion = '2.11.0'
-	guavaVersion = '33.5.0-jre'
-	jsoupVersion = '1.21.2'
 }
 
 repositories {
@@ -32,26 +16,26 @@ repositories {
 
 dependencies {
 	// Gson for JSON serialization (used in DTOs)
-	api "com.google.code.gson:gson:${gsonVersion}"
+	api "com.google.code.gson:gson:${rootProject.ext.gsonVersion}"
 
 	// Jackson for JSON annotations (used in DTOs for Spring)
 	api 'com.fasterxml.jackson.core:jackson-databind'
 	api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
 	// Guava for utilities
-	api "com.google.guava:guava:${guavaVersion}"
+	api "com.google.guava:guava:${rootProject.ext.guavaVersion}"
 
 	// Jsoup for HTML parsing (WebInspector)
-	api "org.jsoup:jsoup:${jsoupVersion}"
+	api "org.jsoup:jsoup:${rootProject.ext.jsoupVersion}"
 
 	// Spring Boot for configuration properties
 	api 'org.springframework.boot:spring-boot-starter'
 
 	// Lombok
-	compileOnly "org.projectlombok:lombok:${lombokVersion}"
-	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
-	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
+	annotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
+	testCompileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
+	testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 
 	// Test dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -60,7 +44,7 @@ dependencies {
 // Spring Boot dependency management (without the plugin)
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.5"
+		mavenBom "org.springframework.boot:spring-boot-dependencies:${rootProject.ext.springBootVersion}"
 	}
 }
 
