--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -81,7 +81,7 @@ comics.metrics.error-tracking.max-errors-per-comic=5
 
 # Caffeine Cache Configuration
 # Enable/disable Caffeine caching
-comics.cache.caffeine.enabled=true
+comics.cache.caffeine.enabled=false
 
 # Navigation cache - stores ComicNavigationResult for comic strip navigation
 comics.cache.caffeine.navigation.max-size=300
@@ -100,5 +100,5 @@ comics.cache.caffeine.metadata.max-size=60
 comics.cache.caffeine.metadata.ttl-minutes=60
 
 # Predictive lookahead cache configuration
-comics.cache.caffeine.lookahead.enabled=true
+comics.cache.caffeine.lookahead.enabled=false
 comics.cache.caffeine.lookahead.count=3
