--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -81,7 +81,7 @@ comics.metrics.error-tracking.max-errors-per-comic=5
 
 # Caffeine Cache Configuration
 # Enable/disable Caffeine caching
-comics.cache.caffeine.enabled=false
+comics.cache.caffeine.enabled=true
 
 # Navigation cache - stores ComicNavigationResult for comic strip navigation
 comics.cache.caffeine.navigation.max-size=300
