Refactor and cleanup

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.output.ansi.enabled=always
 spring.profiles.active=production
 
 
-dailyrunner.enabled=true
-startup.reconcile.enabled=true
+daily.runner.enabled=true
+daily.comics.startup.enabled=true
+daily.comics.startup.downloadOnStartup.false=false
 
-comics.cache.location=C:/comics
+comics.cache.location=./comics
 comics.cache.config=./comics.json
