--- a/ComicAPI/src/test/resources/application-junit.properties
+++ b/ComicAPI/src/test/resources/application-junit.properties
@@ -1,13 +1,12 @@
 server.port=8888
-#debug=true
 spring.security.user.name=
 spring.security.user.password=
 spring.output.ansi.enabled=always
-spring.profiles.active=test
 
+daily.runner.enabled=false
+daily.comics.startup.enabled=true
+daily.comics.startup.downloadOnStartup.false=false
 
-dailyrunner.enabled=false
-startup.reconcile.enabled=false
 
 comics.cache.location=.
 comics.cache.config=./comics.json
