--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id "com.coditory.integration-test" version '1.4.5'
 	id "io.spring.dependency-management" version '1.1.6'
-	id "org.springframework.boot" version '3.3.4'
+	id "org.springframework.boot" version '3.3.5'
 	id "java"
 }
 
@@ -25,11 +25,11 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-
 	compileOnly 'org.projectlombok:lombok'
 
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
