--- a/comic-api/src/main/resources/application.properties
+++ b/comic-api/src/main/resources/application.properties
@@ -53,7 +53,7 @@ batch.comic-backfill.cron=0 0 7 * * ?
 batch.comic-backfill.target-year=2025
 batch.comic-backfill.chunk-size=10
 batch.comic-backfill.max-consecutive-failures=3
-batch.comic-backfill.delay-between-comics-ms=2000
+batch.comic-backfill.delay-between-comics-ms=5000
 
 # Batch execution tracking - JSON file location
 batch.tracking.json-file=${comics.cache.location}/batch-executions.json
@@ -100,5 +100,5 @@ comics.cache.caffeine.metadata.max-size=60
 comics.cache.caffeine.metadata.ttl-minutes=60
 
 # Predictive lookahead cache configuration
-comics.cache.caffeine.lookahead.enabled=true
+comics.cache.caffeine.lookahead.enabled=false
 comics.cache.caffeine.lookahead.count=3
