--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
 // Centralized version management for all modules
+plugins {
+    id 'org.openrewrite.rewrite' version '6.26.0' apply false
+}
+
 ext {
     // Project version
     projectVersion = '2.3.0'
@@ -30,6 +34,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'jacoco'
+    apply plugin: 'org.openrewrite.rewrite'
 
     // Set version from central definition
     version = rootProject.ext.projectVersion
@@ -50,9 +55,19 @@ subprojects {
         toolVersion = rootProject.ext.jacocoVersion
     }
 
+    
+   
+        
+    
+
     // Add JUnit Platform Launcher for all subprojects (required by Gradle 8.5+)
     dependencies {
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+        rewrite("org.openrewrite.recipe:rewrite-testing-frameworks:2.0.6")
+    }
+
+    rewrite {
+        activeRecipe("org.openrewrite.java.testing.assertj.JUnitToAssertj")
     }
 }
 
@@ -63,3 +78,6 @@ task testAll {
     description = 'Runs all tests in all subprojects (currently only unit tests)'
     group = 'verification'
 }
+
+
+
