--- a/comic-api/build.gradle
+++ b/comic-api/build.gradle
@@ -94,7 +94,8 @@ dependencies {
 	compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 	testCompileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
-	testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
+	testImplementation "org.assertj:assertj-core:3.27.6"
+    testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 
 	// Annotation processors
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
