--- a/comic-metrics/build.gradle
+++ b/comic-metrics/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 	compileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 	testCompileOnly "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
-	testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
+	testImplementation "org.assertj:assertj-core:3.27.6"
+    testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext.lombokVersion}"
 
 	// Test dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
